[package]
name = "boat-driver"
version = "0.1.0"
authors = ["Birk Tjelmeland <birktjelmeland@yahoo.no>"]
edition = "2018"

[features]
left = []
right = []
calibration = []

[dependencies]
cortex-m-rt = "0.6.9"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m-rtfm = "0.4"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"

[dependencies.common]
path = "../common"

[dependencies.stm32f1]
version = "0.7"
features = ["stm32f103", "rt"]

[dependencies.cortex-m]
version = "0.6.0"
features = ["const-fn"]

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]
