[package]
name = "boat-controller"
version = "0.1.0"
authors = ["Birk Tjelmeland <birktjelmeland@yahoo.no>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.9"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
[dependencies.coroutine]
path = "coroutine"

[dependencies.futures-preview]
version = "=0.3.0-alpha.17"
default-features = false

[dependencies.void]
version = "1.0"
default-features = false

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]
