[package]
name = "coroutine-macro"
version = "0.1.0"
authors = ["Birk Tjelmeland <birktjelmeland@yahoo.no>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"
